Added correct URL references in a list and some basic style

--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Useful Links</title>
 
-Course Resources Useful tools
+    <style>
+       ul a{
+            color: black;
+            text-decoration: none;
+        }
 
-<!-- First link -->
-https://loremipsumgenerator.com/generator/?n=1&t=p Lorem ipsum generator
+        ul a:hover{ color:blueviolet;}
 
-<!-- Second link  -->
-https://micro-editor.github.io/ Micro: Terminal Text Editor HTML
+        
 
-<!-- First Link -->
-http://www.google.com/search?q=html%20is%20awesome Look for HTML
+    </style>
+</head>
+<body>
+    <h1>Course Resources</h1>
 
-<!-- Second link -->
-https://developer.mozilla.org/en-US/docs/Web/HTML MDN HTML portal
+    <h2>Useful Tools</h2>
+    <ul>
+        <li><a href="https://loremipsumgenerator.com/generator/?n=1&t=p" target="_blank" title="https://loremipsumgenerator.com">Lorem ipsum generator</a></li>
+        <li><a href="https://micro-editor.github.io/" target="_blank">Micro: Terminal Text Editor HTML</a></li>
+    </ul>
 
-<!-- Third Link -->
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element MDN HTML element reference
 
-<!-- Fourth Link -->
-https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references HTML Entity reference table
+    <h2>HTML</h2>
+    <ul>
+        <li><a href="http://www.google.com/search?q=html%20is%20awesome" target="_blank">Look for HTML</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN HTML portal</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">MDN HTML element reference</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references" target="_blank">HTML Entity reference table</a></li>
+        <li><a href="https://validator.w3.org/#validate_by_upload+with_options" target="_blank">HTML validator</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank">MDN HTML Tutorialr</a></li>
+    </ul>
 
-<!-- Fifth Link -->
-https://validator.w3.org/#validate_by_upload+with_options HTML validator
+</body>
+</html>
 
-<!-- Sixth Link -->
-https://developer.mozilla.org/en-US/docs/Learn MDN HTML Tutorial
+ 
